@@ -130,6 +130,6 @@ to initialize default objects.
 
 
 11)
-unknown objects/args:
-Decoder::unknownObjectArrived(const Entity::Empty&);
-and for args: if(op->getArgs()[0]->getClassNo() == Entity::EMPTY_NO) ...
+anonymous/unknown objects/args:
+Decoder::objectArrived(const Entity::Anonymous&);
+and for args: if(op->getArgs()[0]->getClassNo() == Entity::ANONYMOUS_NO) ...
